Agrega codigo AdSence

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 <body>
 
   <div id="root"></div>
-  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2739481654152230"
+     crossorigin="anonymous"></script>
 </body>
 </html>
